--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "firebase": "^10.6.0",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
@@ -27,6 +29,8 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
