--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,6 +19,7 @@
     }
   ],
   "start_url": ".",
+  "url": "https://santechapihubs.vercel.app",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff",
